tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f
  : \Number -> Null
  = \x -> Number => 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_3.kk:3:11
  │
3 │   = \x -> Number => 2
  │           ^^^^^^ Wrong type annotation
  │
  = The expected type annotation is:

      Null
